Salvare progres înainte de reconfigurare